python-dynamic-table (0.8.6-%DIST%1) %DIST%; urgency=low

  * Fixed minor bug where a non-string in a row can break rendering

 -- Dan Farnsworth <absltkaos@gmail.com>  Fri, 30 Jan 2015 07:00:00 -0700

python-dynamic-table (0.8.5-%DIST%1) %DIST%; urgency=low

  * Feature: Support a not contains operator for TableFilters '!/'

 -- Dan Farnsworth <absltkaos@gmail.com>  Wed, 19 Nov 2014 18:00:00 -0700

python-dynamic-table (0.8.4-%DIST%1) %DIST%; urgency=low

  * Bug Fix: RenderHTML threw error when rendered without header set

 -- Dan Farnsworth <absltkaos@gmail.com>  Wed,  5 Nov 2014 11:00:00 -0700

python-dynamic-table (0.8.3-%DIST%1) %DIST%; urgency=low

  * Bug Fix: Improper TableFilters when a single column is to display
  * Bug Fix: Force TableFilter row rules that are string comparisons so the
    cells are converted to str

 -- Dan Farnsworth <absltkaos@gmail.com>  Tue,  4 Nov 2014 10:42:00 -0700

python-dynamic-table (0.8.2-%DIST%1) %DIST%; urgency=low

  * Bug Fix: Improper handling when no column rule is specified

 -- Dan Farnsworth <absltkaos@gmail.com>  Thu, 18 Sep 2014 17:01:00 -0600

python-dynamic-table (0.8.1-%DIST%2) %DIST%; urgency=low

  * Added an additional option to Table.add_row to add arbitrary rendering
    options for Render objects to use.
  * Added features to RenderHTML to make use of the new row_render_opts
    created from add_row, so attributes can be added to <tr> and <td>/<th>
  * Added table_attr option to RenderHTML for setting <table> attributes

 -- Dan Farnsworth <absltkaos@gmail.com>  Wed, 27 Aug 2014 17:42:00 -0600

python-dynamic-table (0.8.0-%DIST%2) %DIST%; urgency=low

  * Applied minor bug patch around TableFilter class, not handling number
    comparisons correctly due to poor operator logic

 -- Dan Farnsworth <absltkaos@gmail.com>  Mon, 18 Aug 2014 16:19:00 -0600

python-dynamic-table (0.8.0-%DIST%1) %DIST%; urgency=low

  * Add in TableFilters
  * Fixed Miscellaneous Bugs